--- a/privacy/index.html
+++ b/privacy/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <title>Eilarc - Blockchain Solutions</title>
+    <title>Eilarc - Privacy Policy</title>
 
     <!-- Styles -->
     <link href="/assets/css/page.min.css" rel="stylesheet">
@@ -25,8 +25,8 @@
     <!--  Open Graph Tags -->
     <meta property="og:image:height" content="1257">
     <meta property="og:image:width" content="2400">
-    <meta property="og:title" content="Eilarc - Blockchain Solutions">
-    <meta property="og:description" content="Transform your business with blockchain technology, we can help determine how blockchain can revolutionise  your business.">
+    <meta property="og:title" content="Eilarc - Privacy Policy">
+    <meta property="og:description" content="Privacy Policy Eilarc Software Solutions">
     <meta property="og:url" content="http://eilarc.com">
     <meta property="og:image" content="http://localhost:8080/assets/img/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
@@ -49,12 +49,13 @@
 
             <section class="navbar-mobile">
                 <nav class="nav nav-navbar ml-auto">
-                    <a class="nav-link" href="/">Home</a>
-                    <a class="nav-link" href="/#services">Services</a>
-                    <a class="nav-link" href="/#blockchain">Blockchain</a>
-                    <a class="nav-link" href="/#cryptocurrency">Crypto Currency</a>
-                    <!-- <a class="nav-link" href="#about">About</a> -->
-                    <a class="nav-link" href="/#contact">Contact</a>
+                <a id="homeLink" class="nav-link" href="/">Home</a>
+                <a id="servicesLink" class="nav-link" href="/#services">Services</a>
+                <a id="processLink" class="nav-link" href="/#whyeilarc">Why choose Eilarc?</a>
+                <a id="technologiesLink" class="nav-link" href="/#technologies">Technologies</a>
+                <a id="portfolioLink" class="nav-link" href="/#portfolio">Portfolio</a>
+                <!-- <a id="contactLink" class="nav-link" href="#contact">Contact</a> -->
+                <!-- <a class="nav-link" href="/blog">Blog</a> -->
                 </nav>
             </section>
         </div>
