--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
           </ul>
           <br>
-          <a id="ctaWhyErc" class="btn btn-lg btn-info btn-round" href="#whyeilarc">Why Choose Eilarc?</a>
-          <a id="ctaHome" class="d-md-none mt-3 btn btn-lg btn-round btn-success" href="#contact">Get A Free Consultation</a>
+          <a id="ctaWhyErc" class="btn btn-lg btn-info btn-round mb-3" href="#whyeilarc">Why Choose Eilarc?</a>
+          <a id="ctaHome" class="d-md-none btn btn-lg btn-round btn-success" href="#contact">Get A Free Consultation</a>
         </div>
         <div class="d-none d-md-block col-md-2"></div>
         <div class="d-none d-md-block col-md-4 bg-white px-7 py-7 rounded shadow-4 text-center">
